<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      xmlns:tools="http://schemas.android.com/tools"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
                      tools:context=".ui.activities.MainActivity">
            <!-- Шапка -->
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_big_72"
                android:background="@color/gray"
                xmlns:android="http://schemas.android.com/apk/res/android">
                <TableRow>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3">
                        <TableLayout
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent"
                            xmlns:android="http://schemas.android.com/apk/res/android">
                                <TableRow>
                                    <TextView
                                        android:id="@+id/rating_tv"
                                        android:textAppearance="?android:attr/textAppearanceMedium"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="@dimen/spacing_normal_16"
                                        style="@style/head_text"
                                        android:textSize="25sp"
                                        android:text="@string/amount_string_exmpl"
                                        />
                                </TableRow>
                                <TableRow>
                                    <TextView
                                        android:textAppearance="?android:attr/textAppearanceMedium"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginLeft="@dimen/spacing_normal_16"
                                        style="@style/head_text"
                                        android:textSize="16sp"
                                        android:text="@string/rating_string"
                                        />
                                </TableRow>
                        </TableLayout>
                    </LinearLayout>
                    <View
                        style="@style/line_head"
                       />
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.4">
                        <TableLayout
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent"
                            xmlns:android="http://schemas.android.com/apk/res/android">
                            <TableRow>
                                <TextView
                                    android:id="@+id/amount_code_strings_tv"
                                    android:textAppearance="?android:attr/textAppearanceMedium"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    style="@style/head_text"
                                    android:textSize="25sp"
                                    android:text="@string/amount_string_exmpl"
                                    />
                            </TableRow>
                            <TableRow>
                                <TextView
                                    android:textAppearance="?android:attr/textAppearanceMedium"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textSize="14sp"
                                    style="@style/head_text"
                                    android:text="@string/code_amount_string"
                                    />
                            </TableRow>
                        </TableLayout>
                    </LinearLayout>
                    <View
                        style="@style/line_head"
                        />
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3">
                        <TableLayout
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent"
                            xmlns:android="http://schemas.android.com/apk/res/android">
                            <TableRow>
                                <TextView
                                    android:id="@+id/amount_projects_tv"
                                    android:textAppearance="?android:attr/textAppearanceMedium"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    style="@style/head_text"
                                    android:textSize="25sp"
                                    android:text="@string/amount_string_exmpl"
                                    />
                            </TableRow>
                            <TableRow>
                                <TextView
                                    android:textAppearance="?android:attr/textAppearanceMedium"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="@dimen/spacing_small_8"
                                    android:textSize="16sp"
                                    style="@style/head_text"
                                    android:text="@string/projects_string"
                                    />
                            </TableRow>
                        </TableLayout>
                    </LinearLayout>
                </TableRow>
            </TableLayout>


            <!--Телефон-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_call_black_24dp"
                    />
                <LinearLayout
                    style="@style/fields">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <EditText
                            style="@style/text_content"
                            android:id="@+id/phone_et"
                            android:inputType="phone"
                            android:hint="@string/mobile_number_string"
                            android:text="+7(965)143-55-03"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_phone_in_talk_black_24dp"
                    />
            </LinearLayout>

            <View
                style="@style/line"
                />

            <!--Е-mail-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_markunread_black_24dp"
                    />
                <LinearLayout
                    style="@style/fields">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <EditText
                            style="@style/text_content"
                            android:id="@+id/email_et"
                            android:inputType="textEmailAddress"
                            android:hint="@string/email_string"
                            android:text="Zenne_@mail.ru"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_send_black_24dp"
                    />
            </LinearLayout>
            <View
                style="@style/line"
                />

            <!--Профиль в VK-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/vk_circle"
                    />
                <LinearLayout
                    style="@style/fields">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <EditText
                            style="@style/text_content"
                            android:id="@+id/vk_profile_et"
                            android:hint="@string/vk_profile_string"
                            android:text="vk.com/jshapoval"
                            />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_visibility_black_24dp"
                    />
            </LinearLayout>
            <View
                style="@style/line"
                />

            <!--Профиль на GitHub-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/github_circle"
                    />
                <LinearLayout
                    style="@style/fields">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <EditText
                            style="@style/text_content"
                            android:id="@+id/git_profile_et"
                            android:hint="@string/git_profile_string"
                            android:text="github.com/JannaSha"
                            />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_visibility_black_24dp"
                    />
            </LinearLayout>
            <View
                style="@style/line"
                />

            <!--О себе-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_account_circle_black_24dp"
                    />
                <LinearLayout
                    style="@style/fields">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <EditText
                            style="@style/text_content"
                            android:id="@+id/about_et"
                            android:hint="@string/about_string"
                            android:text="@string/about_string_exmpl"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
            <View
                style="@style/line"
                />
        </LinearLayout>
</android.support.v4.widget.NestedScrollView>
